<resources>
    <string name="app_name">Walkom</string>

    <!-- Text -->
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="enter_code_text">Введите код</string>
    <string name="description_text">Мы отправим вас в невероятное путешествие, при помощи <font color="#238A4C"><b>дополненной реальности</b></font></string>
    <string name="tour_route_text">Маршрут экскурсии</string>
    <string name="choose_action_text">Выберите действие</string>
    <string name="excursions_text">Экскурсии</string>
    <string name="confirm_text">Вы уверены?</string>
    <string name="close_excursion_description_text">Если закроете экскурсию, то не сможете ее продолжить и весь пройденный маршрут будет сброшен</string>

    <!-- Placeholders -->
    <string name="email_placeholder">Введите почту</string>

    <!-- Buttons -->
    <string name="continue_button">Продолжить</string>
    <string name="continue_guest_button">Продолжить как гость</string>
    <string name="start_excursion_button">Начать экскурсию</string>
    <string name="show_ar_button">Смотреть в AR</string>
    <string name="run_excursion_button">Запустить</string>
    <string name="delete_files_excursion_button">Удалить файлы экскурсии</string>
    <string name="confirm_button">Да</string>
    <string name="cancel_button">Отмена</string>

    <!-- Content descriptions -->
    <string name="list_places_description">Посмотреть список мест</string>
    <string name="location_me_description">Определить мое местоположение</string>
    <string name="close_map_description">Закрыть карту</string>
    <string name="zoom_in_description">Увеличить карту</string>
    <string name="zoom_out_description">Уменьшить карту</string>
    <string name="pause_description">Поставить экскурсию на паузу</string>
    <string name="stop_excursion">Закончить экскурсию</string>
    <string name="close_excursion">Закрыть экскурсию</string>
    <string name="options_excursion">Открыть окно с меню экскурсии</string>
    <string name="close_camera_ar">Закрыть окно с камерой</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>