<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/confirm_text"
        android:fontFamily="@font/exo2_bold"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_h4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/close_excursion_description_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/green_button"
            android:text="@string/confirm_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/green_button"
            android:backgroundTint="@color/red"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>