<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.map.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="1dp" />

<!--    <io.github.sceneview.ar.ArSceneView-->
<!--        android:id="@+id/sceneView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageButton
        android:id="@+id/closeExcursion"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_system_top"
        android:layout_marginStart="15dp"
        android:paddingEnd="2dp"
        android:background="@drawable/light_button"
        android:contentDescription="@string/stop_excursion"
        android:src="@drawable/ic_arrow_back"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_gray" />

    <androidx.cardview.widget.CardView
        android:id="@+id/auxiliaryTable"
        android:layout_width="0px"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_system_top"
        android:layout_marginHorizontal="10dp"
        android:paddingTop="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/listPlaces"
        app:layout_constraintStart_toEndOf="@+id/closeExcursion"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="6dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:id="@+id/descriptionTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="27dp"
            android:textSize="12sp"
            android:textColor="@color/light_gray"/>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/listPlaces"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_system_top"
        android:layout_marginEnd="15dp"
        android:background="@drawable/light_button"
        android:contentDescription="@string/list_places_description"
        android:src="@drawable/ic_list"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_gray" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="end|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/zoomIn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/light_button"
            android:contentDescription="@string/zoom_in_description"
            android:src="@drawable/ic_plus"
            android:elevation="8dp"
            app:tint="@color/light_gray" />

        <ImageButton
            android:id="@+id/zoomOut"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/light_button"
            android:contentDescription="@string/zoom_out_description"
            android:src="@drawable/ic_minus"
            android:elevation="8dp"
            app:tint="@color/light_gray" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/location"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/circle_light_button"
        android:src="@drawable/ic_navigation"
        android:contentDescription="@string/location_me_description"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/mapview"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/light_gray" />

    <Button
        android:id="@+id/startExcursion"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/green_button"
        android:text="@string/start_excursion_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/soundAction"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="18dp"
        android:elevation="8dp"
        android:visibility="gone"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pauseExcursion"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="17dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_pause"
                app:tint="@color/light_gray"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:maxHeight="5dp"
                android:progressDrawable="@drawable/bg_seekbar"
                android:thumbTint="@color/light_gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>