<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ExcursionActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:orientation="vertical"
        android:paddingStart="40dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="@color/dark_gray"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/description_text"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

<!--    <EditText-->
<!--        android:id="@+id/emailField"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@drawable/text_input"-->
<!--        android:hint="@string/email_placeholder"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:paddingHorizontal="15dp"-->
<!--        android:textColor="@color/dark_gray"-->
<!--        android:textColorHint="@color/light_gray"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/continueBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_button"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/continueGuestBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        android:text="@string/continue_guest_button"-->
<!--        android:textColor="@color/light_gray"-->
<!--        android:textSize="16sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>